--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
-    <title>Document</title>
+    <title> adith's i-it group</title>
+    <meta name="google-site-verification" content="KMw3aRAtjsF9AKLYk0GpkMYoapIqxkXM3UleOi664c4" />
 </head>
 <body>
 
