--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
           </div>
 
 
-          <div class="flex flex-wrap -m-4">
+          <div class="flex flex-wrap -m-4 items-center sm:justify-start justify-center">
             <div class="p-4 lg:w-1/2">
               <div class="h-full flex sm:flex-row flex-col items-center sm:justify-start justify-center text-center sm:text-left">
                 <img alt="team" class="flex-shrink-0 rounded-lg w-48 h-48 object-cover object-center sm:mb-0 mb-4" src="https://media.istockphoto.com/id/1349474627/photo/digital-number-1-over-blue-technological-background.jpg?s=612x612&w=0&k=20&c=KUMNJE-lBViV1rGS-uX7KtT4j9p0RBhj6THMdq2O-a8=">
